# korah

./: Cargo.toml  LICENSE  README.md  korah.toml
korahd/: Cargo.toml
korahd/src/: main.rs
korahd/src/api/: mod.rs  query.rs  tool.rs
korahd/src/db/: config.rs  mod.rs  schema.rs  schema.sql
korahd/src/llm/: context.rs  mod.rs  ollama.rs
korahd/src/tool/: find_files.rs  mod.rs
korahd/src/util/: fmt.rs
korahsvc/: Cargo.toml
src/: config.rs  context.rs  main.rs
src/llm/: mod.rs  ollama.rs  open_ai.rs
src/tool/: find_files.rs  find_processes.rs  mod.rs
