[workspace]
members = ["korahd"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
env_logger = "0.11.6"
log = "0.4.22"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-rusqlite = "0.6.0"
