[workspace]
members = ["korahd"]
resolver = "2"

[workspace.dependencies]
axum = { features = ["macros"], version = "0.8.1" }
axum-extra = "0.10.0"
clap = { features = ["derive", "env"], version = "4.5.23" }
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.22"
reqwest = { features = ["json"], version = "0.12.12" }
serde = { features = ["derive"], version = "1.0.217" }
serde_json = { features = ["raw_value"], version = "1.0.134" }
thiserror = "2.0.9"
tokio = { features = ["macros", "rt-multi-thread"], version = "1.42.0" }
tokio-rusqlite = "0.6.0"
tokio-stream = "0.1.17"
