[package]
name = "korah"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { features = ["serde"], version = "0.4.39" }
clap = { features = ["derive", "env", "string"], version = "4.5.23" }
ctrlc = "3.4.5"
either = "1.13.0"
env_logger = "0.11.6"
log = { features = ["serde"], version = "0.4.22" }
netstat2 = "0.11.1"
regex = "1.11.1"
schemars = { features = ["chrono"], version = "0.8.21" }
serde = { features = ["derive"], version = "1.0.217" }
serde_json = { features = ["raw_value"], version = "1.0.134" }
shellexpand = { features = ["path"], version = "3.1.0" }
strfmt = "0.2.4"
sys-locale = "0.3.2"
sysinfo = "0.33.1"
thiserror = "2.0.11"
toml = "0.8.19"
ureq = { features = ["json"], version = "2.12.1" }
url = { features = ["serde"], version = "2.5.4" }
whoami = "1.5.2"
